# bd_warehouse

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml
.github/actions/setup/: action.yml
.github/workflows/: publish.yml  test.yml
docs/: bearing.rst  conf.py  fastener.rst  flange.rst  gear.rst  index.rst  installation.rst  o_rings.rst  openbuilds.rst  pipe.rst  requirements.txt  retaining_ring.rst  shaft_key.rst  sprocket.rst  thread.rst
examples/: flange_logo.py  pillow_block.py  pipe_and_flanges.py  pipe_logo.py  thread.py  threads.py
src/b3d_warehouse/: flange.py  pipe.csv  pipe.py
src/bd_warehouse/: __init__.py  aluminum_extrusions.py  bearing.py  fastener.py  flange.py  gear.py  gears.py  o_rings.py  open_builds.py  pipe.csv  pipe.py  pipe_test.py  retaining_ring.py  shaft_key.py  sprocket.py  thread.py
src/bd_warehouse/data/: aluminum_extrusions.csv  clearance_hole_sizes.csv  din471.csv  din472.csv  domed_cap_nut_parameters.csv  heatset_nut_parameters.csv  hex_head_parameters.csv  internal_tooth_lock_washer_parameters.csv  low_profile_parameters.csv  nominal_screw_lengths.csv  o-ring_dynamic_gland_parameters.csv  o-ring_parameters.csv  o-ring_static_gland_parameters.csv  pan_head_parameters.csv  setscrew_parameters.csv  shaft_key_parameters.csv  single_row_capped_deep_groove_ball_bearing_parameters.csv  single_row_tapered_roller_bearing_parameters.csv  socket_head_cap_parameters.csv
src/bd_warehouse/data_flange/: drilling_class_150.csv  drilling_class_1500.csv  drilling_class_2500.csv  drilling_class_300.csv  drilling_class_400.csv  drilling_class_600.csv  drilling_class_900.csv  flange_data_class_150.csv  flange_data_class_1500.csv  flange_data_class_2500.csv  flange_data_class_300.csv  flange_data_class_400.csv  flange_data_class_600.csv  flange_data_class_900.csv  ring_joint_facings_class_150.csv  ring_joint_facings_class_300.csv
tests/: test_bearings.py  test_fasteners.py  test_gears.py  test_o_rings.py  test_retaining_ring.py  test_shaft_key.py  test_sprocket.py  test_thread.py
