[build-system]

requires = [
    "setuptools>=45",
    "wheel",
    "setuptools_scm[toml]>=6.2",
]

build-backend = "setuptools.build_meta"

[project]
name = "bd_warehouse"
#version = "0.1.0" # Uncomment this for the next release?
dynamic = ["version"]
authors = [
    {name = "Roger Maitland", email = "gumyr9@gmail.com"},
]
description = "A build123d parametric part collection"
readme = "README.md"
requires-python = ">=3.10, <3.14"
keywords = [
    "3d models",
    "3d printing",
    "3d",
    "brep",
    "cad",
    "cadquery",
    "opencascade",
    "python",
]
license = {text = "Apache-2.0"}
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]

dependencies = [
    "build123d >= 0.10.0",
    "typing_extensions >= 4.4.0, <5",
]

[project.optional-dependencies]
# dependencies to build the docs
docs = [
    "sphinx==8.1.3", # pin for stability of docs builds
    "sphinx-design",
    "sphinx-copybutton",
    "sphinx-hoverxref",
    "sphinx-rtd-theme",
    "sphinx-autodoc-typehints",
]

development = [
    "black",
    "mypy",
    "pytest",
    "pytest-cov",
    "wheel",
]

all = [
    "bd_warehouse[docs]",
    "bd_warehouse[development]",
]

[tool.setuptools]
# ...
# By default, include-package-data is true in pyproject.toml, so you do
# NOT have to specify this line.
include-package-data = true

[tool.setuptools.packages.find]
namespaces = true
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.csv"]
# "bd_warehouse.data" = ["*.csv"]
# exclude = ["bd_warehouse._dev"]

[tool.setuptools_scm]
write_to = "src/bd_warehouse/_version.py"

[tool.black]
target-version = ["py310", "py311", "py312", "py313"]
line-length = 88
